--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "@nestjs/swagger": "^6.2.1",
     "@prisma/client": "^4.12.0",
     "argon2": "^0.30.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "common": "link:@types/@nestjs/common",
     "dotenv": "^16.0.3",
     "lodash": "^4.17.21",
     "mockjs": "^1.1.0",
